  cvs tag -Rc v0_1009 .
]

,----- To Do -----
|
| After 0.11
|
| Filter::HTTPD test.
| Filter::Reference test.
| Wheel::ListenAccept test.
|
| Add new newlines to Filter::Line.
|
| Split the samples out into a separate distribution.
| Revise the POE web pages.
|
`-----------------


0.1011 2000.??.??
-----------------

Added t/17_filter_ref.t: 80 tests for Filter::Reference.


0.1010 2000.06.20 (!!!)
-----------------------

Wheel::FollowTail was working on its filehandles before setting them
non-blocking.  Rearranged a couple lines of code to turn off blocking
before working with filehandles.

Tweaked the signals tests to wait longer for child processes to
terminate.

(!!!) I have nothing good to say about POE::Kernel's experimental
fork() method, so I will refrain from saying anything more than "It
has been removed."  Please use plain fork(2).

(!!!) Added variable-length block support to Filter::Block.  In this
mode, each item will be received the same as it was put().  This
borrows heavily from Filter::Reference which did it first.  Oh, the
"!!!" is because Filter::Block's new() method doesn't default to
512-byte blocks anymore; an unspecified/undefined BlockSize enables
variable-length blocks, and a <1 BlockSize is an error.

Added a new test, t/15_filter_block.t to exercise the block filter.

Made Filter::Stream's put() method copy the chunks it's given rather
than pass them on by reference.  This seems to be the safest thing to
do, but I'm not sure why I think so.

Added a new test, t/16_filter_stream.t to exercise the stream filter.


0.1009 2000.06.17 (!!!)
-----------------------

(!!!) Documented in the changes for 0.1006 that $kernel->fork() was
broken.

Added Filter::Block to 00_coverage.t.

Added t/14_wheels_ft.t to test Wheel::FollowTail and Filter::Block.

FollowTail would go into an infinite loop while discarding initial
data.  It wasn't checking drivers' get() methods' return values for
emptiness.
